ip6tables.rules
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

# loopback ingress
-A INPUT -i lo -j ACCEPT

# TCP ingress
-A INPUT -p tcp --dport 22 -j ACCEPT
-A INPUT -p tcp --dport 0:1023 -j DROP

# UDP ingress
-A INPUT -p udp --sport 123 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -p udp --dport 0:1023 -j DROP

# ICMP ingress
-A INPUT -p icmpv6 --icmpv6-type destination-unreachable -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type packet-too-big -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type time-exceeded -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type parameter-problem -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type echo-request -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type echo-reply -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type router-advertisement -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type neighbor-solicitation -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type neighbor-advertisement -j ACCEPT
-A INPUT -p icmpv6 -j DROP

# default ingress
-A INPUT -j ACCEPT

# loopback egress
-A OUTPUT -s ::1 -d ::1 -j ACCEPT

# TCP egress
-A OUTPUT -p tcp --sport 22 -j ACCEPT
-A OUTPUT -p tcp --sport 0:1023 -j DROP

# UDP egress
-A OUTPUT -p udp --sport 53 -j ACCEPT
-A OUTPUT -p udp --sport 123 -j ACCEPT
-A OUTPUT -p udp --dport 123 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp --sport 0:1023 -j DROP

# ICMP egress
-A OUTPUT -p icmpv6 --icmpv6-type destination-unreachable -j ACCEPT
-A OUTPUT -p icmpv6 --icmpv6-type packet-too-big -j ACCEPT
-A OUTPUT -p icmpv6 --icmpv6-type time-exceeded -j ACCEPT
-A OUTPUT -p icmpv6 --icmpv6-type parameter-problem -j ACCEPT
-A OUTPUT -p icmpv6 --icmpv6-type echo-request -j ACCEPT
-A OUTPUT -p icmpv6 --icmpv6-type echo-reply -j ACCEPT
-A OUTPUT -p icmpv6 --icmpv6-type neighbor-solicitation -j ACCEPT
-A OUTPUT -p icmpv6 --icmpv6-type neighbor-advertisement -j ACCEPT
-A OUTPUT -p icmpv6 -j DROP

# default egress
-A OUTPUT -j ACCEPT

COMMIT
